--- a/ViewzShare/Pages/ViewSession.cshtml
+++ b/ViewzShare/Pages/ViewSession.cshtml
@@ -497,10 +497,10 @@
             }
         }
 
-        @media (max-width: 700px) {
-            .gallery-wrapper {
-                min-height: auto;
-                padding-bottom: 32px;
+        @@media (max-width: 700px) {
+            .gallery-wrapper,
+            .gallery-stage {
+                min-height: 100vh;
             }
 
             .gallery-thumbs,
