--- a/ViewzShare/Pages/ViewSession.cshtml
+++ b/ViewzShare/Pages/ViewSession.cshtml
@@ -293,17 +293,17 @@
             animation-name: galleryStageFade;
         }
 
-        @keyframes gallerySlideInFromRight {
+        @@keyframes gallerySlideInFromRight {
             from { transform: translate3d(26px, 0, 0); opacity: 0; }
             to { transform: translate3d(0, 0, 0); opacity: 1; }
         }
 
-        @keyframes gallerySlideInFromLeft {
+        @@keyframes gallerySlideInFromLeft {
             from { transform: translate3d(-26px, 0, 0); opacity: 0; }
             to { transform: translate3d(0, 0, 0); opacity: 1; }
         }
 
-        @keyframes galleryStageFade {
+        @@keyframes galleryStageFade {
             from { opacity: 0; }
             to { opacity: 1; }
         }
